// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app should render maintenance view for every url 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>Under Maintenance</title>
  </head>
  <body>
    <h1>Under Maintenance</h1>
    <p>Sorry for the inconvenience but the site is currently under planned maintenance.</p>
    <p>We will be back shortly, please check again in a few minutes.</p>
    <p><a href=\\"/foo/bar\\">Reload page</a></p>
  </body>
</html>"
`;

exports[`app should render maintenance view for index 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>Under Maintenance</title>
  </head>
  <body>
    <h1>Under Maintenance</h1>
    <p>Sorry for the inconvenience but the site is currently under planned maintenance.</p>
    <p>We will be back shortly, please check again in a few minutes.</p>
    <p><a href=\\"/\\">Reload page</a></p>
  </body>
</html>"
`;
